Update 25 files
- /docs/.gitkeep
- /docs/docs.go
- /docs/swagger.json
- /docs/swagger.yaml
- /funcs/request.go
- /handlers/booking_admin_handler.go
- /handlers/booking_confirmer_handler.go
- /handlers/booking_final_handler.go
- /handlers/booking_user_handler.go
- /handlers/carpool_management_handler.go
- /handlers/driver_management_handler.go
- /handlers/received_key_admin_handler.go
- /handlers/received_key_driver_handler.go
- /handlers/received_key_user_handler.go
- /handlers/received_vehicle_admin_handler.go
- /handlers/received_vehicle_driver_handler.go
- /handlers/received_vehicle_user_handler.go
- /handlers/vehicle_handler.go
- /handlers/vehicle_inspection_admin_handler.go
- /handlers/vehicle_in_use_admin_handler.go
- /handlers/vehicle_in_use_driver_handler.go
- /handlers/vehicle_in_use_user_handler.go
- /handlers/vehicle_management_handler.go
- /models/request_model.go
- /models/vehicle_model.go
