# handlers/booking_final_handler.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"fmt"
 	"net/http"
+	"strconv"
 	"strings"
 	"time"
 	"vms_plus_be/config"
@@ -385,7 +386,7 @@ func (h *BookingFinalHandler) UpdateRejected(c *gin.Context) {
 
 	funcs.CreateTrnRequestActionLog(request.TrnRequestUID,
 		request.RefRequestStatusCode,
-		"ผู้อนุมัติตีกลับคำขอ",
+		"ถูกตีกลับ จากเจ้าของยานพาหนะ",
 		user.EmpID,
 		"approval-department",
 		request.RejectedRequestReason,
@@ -484,9 +485,15 @@ func (h *BookingFinalHandler) UpdateApproved(c *gin.Context) {
 		}
 	}
 	funcs.UpdateRecievedKeyUser(request.TrnRequestUID)
+
+	var receivedKey models.VmsTrnRequestApprovedWithRecieiveKey
+	if err := config.DB.First(&receivedKey, "trn_request_uid = ?", request.TrnRequestUID).Error; err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Booking not found", "message": messages.ErrBookingNotFound.Error()})
+		return
+	}
 	funcs.CreateTrnRequestActionLog(request.TrnRequestUID,
 		request.RefRequestStatusCode,
-		"ผู้อนุมัติ อนุมัติคำขอแล้ว",
+		receivedKey.ReceivedKeyStartDatetime.Format("02/01/2006")+" ("+strconv.Itoa(receivedKey.ReceivedKeyStartDatetime.Time.Year()+543)+")"+" สถานที่ "+receivedKey.ReceivedKeyPlace+" นัดหมายรับกุญแจ",
 		user.EmpID,
 		"approval-department",
 		"",
@@ -558,4 +565,28 @@ func (h *BookingFinalHandler) UpdateCanceled(c *gin.Context) {
 	)
 
 	c.JSON(http.StatusOK, gin.H{"message": "Updated successfully", "result": result})
+}
+
+// ExportRequests godoc
+// @Summary Export booking requests
+// @Description Export booking requests by criteria
+// @Tags Booking-final
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Security AuthorizationAuth
+// @Param search query string false "Search keyword (matches request_no, vehicle_license_plate, vehicle_user_emp_name, or work_place)"
+// @Param ref_request_status_code query string false "Filter by multiple request status codes (comma-separated, e.g., 'A,B,C')"
+// @Param startdate query string false "Filter by start datetime (YYYY-MM-DD format)"
+// @Param enddate query string false "Filter by end datetime (YYYY-MM-DD format)"
+// @Param order_by query string false "Order by request_no, start_datetime, ref_request_status_code"
+// @Param order_dir query string false "Order direction: asc or desc"
+// @Router /api/booking-final/export-requests [get]
+func (h *BookingFinalHandler) ExportRequests(c *gin.Context) {
+	user := funcs.GetAuthenUser(c, h.Role)
+	if c.IsAborted() {
+		return
+	}
+	query := h.SetQueryRole(user, config.DB)
+	funcs.ExportRequests(c, user, query, StatusNameMapFinal)
 }
